--- a/task5/style_task5.css
+++ b/task5/style_task5.css
@@ -8,10 +8,11 @@ body{
 }
 
 form{
+    
     padding:  5px;
     display: flex;   
     flex-direction: column;  
-   border-radius: 15px;
+    border-radius: 15px;
     border: 0.5px solid;
     background-color: rgba(222, 246, 5, 0.427);
     
@@ -20,4 +21,25 @@ form{
 input{
     padding: 5px;
     margin: 3px;     
+}
+
+.image {
+    margin: 5px;
+    display: flex;
+    /* max-width: 1200px;
+
+    background-color: brown; */
+    flex-direction: row;
+    
+}
+
+.img{
+    margin: 1px;
+    background-color: blueviolet;
+    max-width: 400px;
+    max-height: 400px;
+    overflow: hidden;
+    flex-grow: unset;
+    border-radius: 5px;
+    
 }
