--- a/task5/style_task5.css
+++ b/task5/style_task5.css
@@ -28,6 +28,7 @@ input{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+   justify-content: center;
     
 }
 
@@ -36,7 +37,7 @@ input{
     max-width: 400px;    
     max-height: 400px;   
     border-radius: 8px;
-    float: left;
+    /* float: left; */
     margin: auto;
     
 }
@@ -46,6 +47,7 @@ input{
     border-radius: 8px;
     height: 400px; 
     background-color: blueviolet;
+   
     
 
     /* background: #f0f0f0; */
