--- a/task5/style_task5.css
+++ b/task5/style_task5.css
@@ -43,10 +43,12 @@ input{
 }
 
 .imgcontainer{    
+    display: flex;
     margin: 0 0 0 1.5%;
     border-radius: 8px;
     height: 400px; 
-    background-color: blueviolet;
+    
+    align-items: center;
    
     
 
